login and edit_user responsive

--- a/frontend/edit_user.html
+++ b/frontend/edit_user.html
@@ -46,8 +46,7 @@
                 <div class="image-container">
                     <!-- <img src="#" class="profile-image"> -->
                     <h1>Usuario</h1>
-                    Ultima actividad
-                    <p id="registration_date">Usuario activo desde YYYY</p>
+                    <!-- <p id="registration_date">Ultima actividad: </p> -->
                     <!--Boton cambiar foto perfil-->
                     <!-- <button class="image-button">Cambiar foto</button> -->
                 </div>
