--- a/frontend/map.html
+++ b/frontend/map.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa de contaminacion</title>
-        
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <!-- JS de Leaflet -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -44,7 +44,7 @@
     </div>
 
     <!--Main Content-->
-    <main class="main-content"> 
+    <main class="main-content">
         <div class="map-container">
             <h1>Mapa de Contaminación</h1>
             <div class="map-filters">
@@ -53,13 +53,14 @@
                     <input type="date" id="date-selector">
                 </div>
                 <div class="filter-group">
-                <label for="gas-selector">Gas:</label>
-                <select id="gas-selector">
-                    <option value="o3">O₃</option>
-                    <option value="co">CO</option>
-                    <option value="no2">NO₂</option>
-                    <option value="so2">SO₂</option>
-                </select>
+                    <label for="gas-selector">Gas:</label>
+                    <select id="gas-selector">
+                        <option value="general">General</option>
+                        <option value="o3">O₃</option>
+                        <option value="co">CO</option>
+                        <option value="no2">NO₂</option>
+                        <option value="so2">SO₂</option>
+                    </select>
                 </div>
             </div>
 
@@ -72,21 +73,34 @@
             <div class="gas-one">
                 <div class="gas-info-card">
                     <h1>Ozono (O₃)</h1>
-                    <p>Se forma cuando la contaminación de vehiculos e industrias se mezcla con la luz del sol. Puede causar tos, irritación en los ojos y dificultad para respirar, y también daña plantas y cultivos. Se recomienda no pasar de 0.05-0.06 ppm, y las leyes suelen permitir como máximo 0.07-0.09 ppm.</p>
+                    <p>Se forma cuando la contaminación de vehiculos e industrias se mezcla con la luz del sol. Puede
+                        causar tos, irritación en los ojos y dificultad para respirar, y también daña plantas y
+                        cultivos. Se recomienda no pasar de 0.05-0.06 ppm, y las leyes suelen permitir como máximo
+                        0.07-0.09 ppm.</p>
                 </div>
                 <div class="gas-info-card">
                     <h1>Oxido de Carbono (CO)</h1>
-                    <p>Sale sobre todo de vehiculos, estufas o motores que queman mal el combustible. Puede causar dolor de cabeza, mareos y, en altas cantidades, es muy peligroso porque impide que el cuerpo reciba oxígeno. En el ambiente también afecta a animales y contribuye a la contaminación del aire. Se recomienda no pasar de 9 ppm (promedio de 8 horas), y los límites legales suelen estar entre 9 y 35 ppm, según la norma.</p>
+                    <p>Sale sobre todo de vehiculos, estufas o motores que queman mal el combustible. Puede causar dolor
+                        de cabeza, mareos y, en altas cantidades, es muy peligroso porque impide que el cuerpo reciba
+                        oxígeno. En el ambiente también afecta a animales y contribuye a la contaminación del aire. Se
+                        recomienda no pasar de 9 ppm (promedio de 8 horas), y los límites legales suelen estar entre 9 y
+                        35 ppm, según la norma.</p>
                 </div>
             </div>
             <div class="gas-two">
                 <div class="gas-info-card">
                     <h1>Dioxido de Nitrogeno (NO₂)</h1>
-                    <p>Viene sobre todo de coches, camiones e industrias que queman combustible. Puede irritar los pulmones, causar tos y empeorar el asma; también daña plantas y contribuye a la contaminación del aire. Se recomienda no pasar de 0.02-0.05 ppm, y las leyes suelen permitir como máximo alrededor de 0.05-0.10 ppm.</p>
+                    <p>Viene sobre todo de coches, camiones e industrias que queman combustible. Puede irritar los
+                        pulmones, causar tos y empeorar el asma; también daña plantas y contribuye a la contaminación
+                        del aire. Se recomienda no pasar de 0.02-0.05 ppm, y las leyes suelen permitir como máximo
+                        alrededor de 0.05-0.10 ppm.</p>
                 </div>
                 <div class="gas-info-card">
                     <h1>Dioxido de Azufre (SO₂)</h1>
-                    <p>Sale de fábricas, centrales eléctricas y coches que queman combustibles con azufre. Puede irritar los ojos y los pulmones, causar tos y problemas respiratorios; también daña plantas y contribuye a la lluvia ácida. Se recomienda no pasar de 0.02 ppm (promedio de 24 h), y los límites legales suelen ser como máximo 0.10 ppm.</p>
+                    <p>Sale de fábricas, centrales eléctricas y coches que queman combustibles con azufre. Puede irritar
+                        los ojos y los pulmones, causar tos y problemas respiratorios; también daña plantas y contribuye
+                        a la lluvia ácida. Se recomienda no pasar de 0.02 ppm (promedio de 24 h), y los límites legales
+                        suelen ser como máximo 0.10 ppm.</p>
                 </div>
             </div>
         </div>
