--- a/frontend/map.html
+++ b/frontend/map.html
@@ -73,33 +73,37 @@
             <div class="gas-one">
                 <div class="gas-info-card">
                     <h1>Ozono (O₃)</h1>
-                    <p>Se forma cuando la contaminación de vehiculos e industrias se mezcla con la luz del sol. Puede
-                        causar tos, irritación en los ojos y dificultad para respirar, y también daña plantas y
-                        cultivos. Se recomienda no pasar de 0.05-0.06 ppm, y las leyes suelen permitir como máximo
+                    <br>
+                    <p>· Se forma cuando la contaminación de vehiculos e industrias se mezcla con la luz del sol. <br><br>
+                        · Puede causar tos, irritación en los ojos y dificultad para respirar, y también daña plantas y
+                        cultivos. <br><br>
+                        · Se recomienda no pasar de 0.05-0.06 ppm, y las leyes suelen permitir como máximo
                         0.07-0.09 ppm.</p>
                 </div>
                 <div class="gas-info-card">
-                    <h1>Oxido de Carbono (CO)</h1>
-                    <p>Sale sobre todo de vehiculos, estufas o motores que queman mal el combustible. Puede causar dolor
-                        de cabeza, mareos y, en altas cantidades, es muy peligroso porque impide que el cuerpo reciba
-                        oxígeno. En el ambiente también afecta a animales y contribuye a la contaminación del aire. Se
-                        recomienda no pasar de 9 ppm (promedio de 8 horas), y los límites legales suelen estar entre 9 y
+                    <h1>Oxido de Carbono (CO)</h1><br>
+                    <p>· Sale sobre todo de vehiculos, estufas o motores que queman mal el combustible. <br><br>
+                        · Puede causar dolor de cabeza, mareos y, en altas cantidades, es muy peligroso porque impide que el cuerpo reciba
+                        oxígeno. En el ambiente también afecta a animales y contribuye a la contaminación del aire. <br><br>
+                        · Se recomienda no pasar de 9 ppm (promedio de 8 horas), y los límites legales suelen estar entre 9 y
                         35 ppm, según la norma.</p>
                 </div>
             </div>
             <div class="gas-two">
                 <div class="gas-info-card">
-                    <h1>Dioxido de Nitrogeno (NO₂)</h1>
-                    <p>Viene sobre todo de coches, camiones e industrias que queman combustible. Puede irritar los
-                        pulmones, causar tos y empeorar el asma; también daña plantas y contribuye a la contaminación
-                        del aire. Se recomienda no pasar de 0.02-0.05 ppm, y las leyes suelen permitir como máximo
+                    <h1>Dioxido de Nitrogeno (NO₂)</h1><br>
+                    <p>· Viene sobre todo de coches, camiones e industrias que queman combustible. <br><br>
+                        · Puede irritar los pulmones, causar tos y empeorar el asma; también daña plantas y contribuye a la contaminación
+                        del aire. <br><br>
+                        · Se recomienda no pasar de 0.02-0.05 ppm, y las leyes suelen permitir como máximo
                         alrededor de 0.05-0.10 ppm.</p>
                 </div>
                 <div class="gas-info-card">
-                    <h1>Dioxido de Azufre (SO₂)</h1>
-                    <p>Sale de fábricas, centrales eléctricas y coches que queman combustibles con azufre. Puede irritar
-                        los ojos y los pulmones, causar tos y problemas respiratorios; también daña plantas y contribuye
-                        a la lluvia ácida. Se recomienda no pasar de 0.02 ppm (promedio de 24 h), y los límites legales
+                    <h1>Dioxido de Azufre (SO₂)</h1><br>
+                    <p>· Sale de fábricas, centrales eléctricas y coches que queman combustibles con azufre. <br><br>
+                        · Puede irritar los ojos y los pulmones, causar tos y problemas respiratorios; también daña plantas y contribuye
+                        a la lluvia ácida. <br><br>
+                        · Se recomienda no pasar de 0.02 ppm (promedio de 24 h), y los límites legales
                         suelen ser como máximo 0.10 ppm.</p>
                 </div>
             </div>
